@@ -6,28 +6,21 @@
  */
 package org.gridsuite.merge.orchestrator.server;
 
-import com.powsybl.commons.PowsyblException;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiResponse;
 import io.swagger.annotations.ApiResponses;
-import org.gridsuite.merge.orchestrator.server.dto.IgmQualityInfos;
-import org.gridsuite.merge.orchestrator.server.dto.MergeInfos;
+import org.gridsuite.merge.orchestrator.server.dto.Merge;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
 
 /**
  * @author Franck Lecuyer <franck.lecuyer at rte-france.com>
@@ -46,47 +39,23 @@ public class MergeOrchestratorController {
         this.mergeOrchestratorService = mergeOrchestratorService;
     }
 
-    @GetMapping(value = "/merges", produces = MediaType.APPLICATION_JSON_VALUE)
-    @ApiOperation(value = "Get all merges", response = List.class)
-    @ApiResponses(value = {@ApiResponse(code = 200, message = "The list of all merges")})
-    public ResponseEntity<List<MergeInfos>> getMergesList() {
-        List<MergeInfos> merges = mergeOrchestratorService.getMergesList();
-        return ResponseEntity.ok().contentType(MediaType.APPLICATION_JSON).body(merges);
-    }
-
-    @GetMapping(value = "/merges/{process}", produces = MediaType.APPLICATION_JSON_VALUE)
-    @ApiOperation(value = "Get all merges for a process", response = List.class)
+    @GetMapping(value = "{process}/merges", produces = MediaType.APPLICATION_JSON_VALUE)
+    @ApiOperation(value = "Get merges for a process", response = List.class)
     @ApiResponses(value = {@ApiResponse(code = 200, message = "The list of all merges for a process")})
-    public ResponseEntity<List<MergeInfos>> getProcessMergesList(@PathVariable("process") String process) {
-        List<MergeInfos> merges = mergeOrchestratorService.getProcessMergesList(process);
-        return ResponseEntity.ok().contentType(MediaType.APPLICATION_JSON).body(merges);
-    }
-
-    @GetMapping(value = "/merges/{process}/{date}", produces = MediaType.APPLICATION_JSON_VALUE)
-    @ApiOperation(value = "get a merge by process and date", response = MergeInfos.class)
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "The merge information"),
-            @ApiResponse(code = 404, message = "The merge doesn't exist")})
-    public ResponseEntity<MergeInfos> getMerge(@PathVariable("process") String process,
-                                               @PathVariable("date") String date) {
-        try {
-            String decodedDate = URLDecoder.decode(date, "UTF-8");
-            ZonedDateTime dateTime = ZonedDateTime.parse(decodedDate);
-            Optional<MergeInfos> merge = mergeOrchestratorService.getMerge(process, dateTime);
-            return ResponseEntity.of(merge);
-        } catch (UnsupportedEncodingException e) {
-            throw new PowsyblException("Error parsing date");
+    public ResponseEntity<List<Merge>> getMerges(@PathVariable("process") String process,
+                                                 @RequestParam(value = "minDate", required = false) String minDate,
+                                                 @RequestParam(value = "maxDate", required = false) String maxDate) {
+        List<Merge> merges;
+        if (minDate != null && maxDate != null) {
+            String decodedMinDate = URLDecoder.decode(minDate, StandardCharsets.UTF_8);
+            ZonedDateTime minDateTime = ZonedDateTime.parse(decodedMinDate);
+            String decodedMaxDate = URLDecoder.decode(maxDate, StandardCharsets.UTF_8);
+            ZonedDateTime maxDateTime = ZonedDateTime.parse(decodedMaxDate);
+            merges = mergeOrchestratorService.getMerges(process, minDateTime, maxDateTime);
+        } else {
+            merges = mergeOrchestratorService.getMerges(process);
         }
-    }
-
-    @GetMapping(value = "/merges/{caseUuid}/quality", produces = MediaType.APPLICATION_JSON_VALUE)
-    @ApiOperation(value = "get the igm quality", response = IgmQualityInfos.class)
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "The quality information"),
-            @ApiResponse(code = 404, message = "The case doesn't exist")})
-    public ResponseEntity<IgmQualityInfos> getIgmQuality(@PathVariable("caseUuid") String caseId) {
-        Optional<IgmQualityInfos> quality = mergeOrchestratorService.getIgmQuality(UUID.fromString(caseId));
-        return ResponseEntity.of(quality);
+        return ResponseEntity.ok().contentType(MediaType.APPLICATION_JSON).body(merges);
     }
 }
 
